定义各个类的编号规则（类名大写字母+yymmdd+0000n）

--- a/modules/web/src/com/zk/nlqc/web-app.properties
+++ b/modules/web/src/com/zk/nlqc/web-app.properties
@@ -38,3 +38,9 @@ cuba.webContextName = app
 cuba.availableLocales = English|en;中文简体|zh_CN
 cuba.localeSelectVisible = false
 cuba.web.theme = hover
+
+###############################################################################
+#                                  rest api                                   #
+###############################################################################
+cuba.rest.servicesConfig = +com/zk/nlqc/rest-services.xml
+cuba.rest.anonymousEnabled = true
